--- a/templates/PartieAdmin/home.html
+++ b/templates/PartieAdmin/home.html
@@ -6,6 +6,22 @@
 
 {% block content %}
     <h1>this is a test for the templates</h1>
+
+    <h2>Filières</h2>
+    {% for filiere in filieres %}
+    <p>Filiere: {{ filiere }}</p>
+    {% endfor %}
+
+    <h2>Modules</h2>
+     {% for module in modules %}
+    <p>Module: {{ module }}</p>
+        {% for element in module.elements.all %}
+            <p>Element: {{ element }}</p>
+        {% endfor %}
+
+
+    {% endfor %}
+
 {% endblock %}
 
 
