created admin site username xeno pasword xeno

--- a/templates/PartieAdmin/base.html
+++ b/templates/PartieAdmin/base.html
@@ -7,7 +7,7 @@
 
  <title> {% block title %} site de gestion d'absences{% endblock %}</title>
 </head>
-<body>
+<body class="h-100">
 
 {% include 'include/messages.html' %}
 
