--- a/templates/PartieAdmin/login.html
+++ b/templates/PartieAdmin/login.html
@@ -4,13 +4,16 @@
 
 {% load crispy_forms_filters %}
 
-<!--Login--> 
-<div class="container py-5">
-  <h1>Login</h1>
+<!--Login-->
+
+<div class="container py-5 w-25">
+<div class="text-center"> <h1>Login</h1></div>
+
   <form method="POST">
     {% csrf_token %}
     {{ login_form|crispy }}
-    <button class="btn btn-primary" type="submit">Login</button>
+    <div class="mb-4 mt-4 text-center"><button class=" btn btn-primary" type="submit">Login</button></div>
+
   </form>
   <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
 </div>
