--- a/templates/PartieAdmin/navbar.html
+++ b/templates/PartieAdmin/navbar.html
@@ -1,20 +1,20 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="False" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
+  </button>  <div class="collapse navbar-collapse " id="navbarText">
+
+    <ul class="navbar-nav mr-auto d-flex justify-content-between w-100">
       {% if user.is_authenticated %}
 
-      <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Welcome, {{user.username}}</a>
-      </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="">Welcome, {{user.username}}</a>
+      </li>
+            <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
       {% else %}
 
       <li class="nav-item">
